[update] Refactor issue column and row styles to improve visibility and layout

--- a/src/app/chart-area/issue-column/issue-column.component.scss
+++ b/src/app/chart-area/issue-column/issue-column.component.scss
@@ -53,7 +53,6 @@
 }
 .issue-column-day {
   flex: 1 1 auto;
-  border-right: 1px solid #eee;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -64,6 +63,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 
     &.hidden {
       color: transparent;
@@ -75,9 +75,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    border-left: 1px dashed #9c9c9c;
 
     &.hidden {
       color: transparent;
+      border-left: none;
     }
   }
 }
